--- a/Front/front page.html
+++ b/Front/front page.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="background-color: #ecf3f8;">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="Logo_inpt.PNG" alt="" width="140" height="40"
+            <a class="navbar-brand" href="#"><img src="img/Logo_inpt.PNG" alt="" width="140" height="40"
                     class="d-inline-block align-text-center ">ENTREPRISES </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main"
@@ -56,7 +56,7 @@
     <div class="features text-center pt-5 pb-5">
         <div class="container">
             <div class="main-title mt-5 mb-5 position-relative">
-                <img class="mb-4" src="desk1.jpg" alt="" />
+                <img class="mb-4" src="img/desk1.jpg" alt="" />
                 <h2>INPT Entreprises offre plusieurs fonctionnalités</h2>
                 <p class="text-black-50 text-uppercase">Certaines de ces fonctionalités ci-dessous</p>
             </div>
@@ -122,7 +122,7 @@
                 <div class="col-md-6 col-lg-6">
 
                     <div class="info mb-5">
-                        <img src="Logo_inpt.PNG" alt="" width="140" height="70" class="mb-4" />
+                        <img src="img/Logo_inpt.PNG" alt="" width="140" height="70" class="mb-4" />
                         <p class="mb-1">
                         <p>Nous accompagnons vos premiers pas vers l’entreprise"</p> "Nous accompagnons vos premiers
                         pas vers l’entreprise"
